tests/samples/invalid/assignment_type_mismatch.pn
fn main() -> i32
{
	var x: i32 = 0;
	x = true;
	return: x
}
